--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 </body>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="util.js"></script>
 <script src="main.js"></script>
 
 </html>
