--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 
 <head>
     <title>Worktree</title>
-	<link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-    <div id="app">
-    </div>
-
+    <div id="app"></div>
 </body>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="util.js"></script>
