added copyright footer

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <!-- /.container-fluid -->
     </nav>
     <div id="app"></div>
+    <footer> &copy; 2015 Ju Park All Rights Reserved</footer>
 </body>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
