--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">WorkTree</a>
+                <a class="navbar-brand" href="index.html">WorkTree</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
