--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>Worktree</title>
-    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
@@ -25,8 +25,8 @@
     <footer> &copy; 2015 Ju Park All Rights Reserved</footer>
 </body>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
-<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="util.js"></script>
-<script src="main.js"></script>
+<!-- <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script> -->
+<script src="scripts/util.js"></script>
+<script src="scripts/main.js"></script>
 
 </html>
