added styling changes

--- a/index.html
+++ b/index.html
@@ -8,21 +8,10 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <a class="navbar-brand" href="index.html">WorkTree</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
+
+    <header id="header"><a href="index.html">WorkTree</a></header>
     <div id="app"></div>
-    <footer> &copy; 2015 Ju Park All Rights Reserved</footer>
+    <footer id="footer"> &copy; 2015 Ju Park All Rights Reserved</footer>
 </body>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <!-- <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script> -->
