--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Worktree</title>
+    <title>WorkTree</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/main.css">
 </head>
@@ -14,7 +14,7 @@
     <footer id="footer"> &copy; 2015 Ju Park All Rights Reserved</footer>
 </body>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
-<!-- <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script> -->
+<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="scripts/util.js"></script>
 <script src="scripts/main.js"></script>
 
