added UTF-8 meta on index.html, changed all block-scope variables to functional-scope variables, and changed styling for compatibility with firefox

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <title>WorkTree</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
-
     <header id="header"><a href="index.html">WorkTree</a></header>
     <div id="app"></div>
     <footer id="footer"> &copy; 2015 Ju Park All Rights Reserved</footer>
