added a checkbox that hides completed tasks

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,10 @@
 
 <body>
     <header id="header"><a href="index.html">WorkTree</a></header>
+    <form id="checkboxForm">
+        <input type="checkbox" id="checkbox">
+        <label for="checkbox">Hide Completed Tasks</label>
+    </form>
     <div id="app"></div>
     <footer id="footer"> &copy; 2015 Ju Park All Rights Reserved</footer>
 </body>
